@@ -1,3 +1,8 @@
+2011-10-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-77
+	* Fix ClassCastException occurred when opening streams and its content.
+	* Update Unassigned Paths list in Streams when a Path is added.
+
 2011-10-12 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-76
 	* Add the new path to the smart prescaler immediately when inserting
